# segmentacion-cultivos

./: .gitignore  pyproject.toml
reports/: Avance1_Equipo48.ipynb  Avance1_Equipo48_EDA_v2.ipynb  Avance2_BeMyEyes_v2.ipynb  Avance2_Equipo48.ipynb  Avance5_TSViT_LLM_PASTIS.ipynb  TSViT_LLM_PASTIS.ipynb
reports/modelos_alternativos/: Avance3_BeMyEyes_v2.ipynb  Avance4_Modelos_Alternativos.ipynb  ModeloPruebaDualViT.ipynb  prueba_CLIP_v1.ipynb  prueba_CLIP_v2.ipynb  prueba_hibrido_v01.ipynb
